changed the position of the circles based on the data and wrapped them with a scale so they display correctly

--- a/app.css
+++ b/app.css
@@ -26,3 +26,9 @@ h1 {
 span {
 	margin-inline: 8px;
 }
+
+.players circle {
+    fill: var(--font-color);
+    stroke: var(--accent-color);
+    stroke-width: 3px;    
+}
